--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 07-23-04: PlayerDataLoad() not made obsolete by R.E.E.D. [AlexKreuz]
- 07-23-04: R.E.E.D case insensitive duplicate characters not converted. [AlexKreuz]
- 07-23-04: ALBGM_NEWPLAYER fixed after R.E.E.D conflict occured. [AlexKreuz]
- 07-23-04: JCon Account Creator fixed after R.E.E.D conflict occured. [AlexKreuz]
- 07-23-04: addplayer.txt fixed after R.E.E.D conflict occured. [AlexKreuz]
- 07-23-04: _M/_F fixed after R.E.E.D conflict occured. [AlexKreuz]
- 07-23-04: Sorting of Player/Chara lists. [AlexKreuz]
- 07-23-04: R.E.E.D auto-creation of structure. [AlexKreuz]
- 07-23-04: Fixed guild exp calculation. Broke with R.E.E.D. [AlexKreuz]
- 07-23-04: Fixed guild Maxusers calculation. Broke with R.E.E.D. [AlexKreuz]
- 07-23-04: R.E.E.D: Multiple membership in parties fixed. [AlexKreuz]
- 07-23-04: R.E.E.D: Multiple membership in guilds fixed. [AlexKreuz]
- 07-23-04: R.E.E.D: Castles with invalid guilds cleared. [AlexKreuz]
- 07-23-04: R.E.E.D: Invalid Guild members cleared. [AlexKreuz]
- 07-23-04: R.E.E.D: Invalid Party members cleared. [AlexKreuz]
- 07-23-04: R.E.E.D: Guild leader reassigned if leader invalid. [AlexKreuz]
- 07-23-04: R.E.E.D: General error-checking fixes in REED conversion. [AlexKreuz]
- 07-22-04: R.E.E.D Parties were improperly handled and saved. Multi-Party membership. [AlexKreuz]
- 07-22-04: R.E.E.D Inventory, Storage, Cart need to be cleared upon reload. [AlexKreuz]
- 07-22-04: R.E.E.D bug in character reload. [AlexKreuz]
- 07-22-04: Removed Comprehensive Save from shutdown. Faster. [AlexKreuz]
- 07-22-04: Character Variables duplicated. Major instability + lag. [AlexKreuz]
- 07-22-04: Added dynamic error reporting to Inventory, Storage, Cart. [AlexKreuz]
- 07-22-04: I'm tired .. fixed silly command in one file. Compile Error. [AlexKreuz]