@@ -1,7 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - August 29th, 2004
 --------------------------------------------------------------------------------
-- 07-23-04: PlayerDataLoad() not made obsolete by R.E.E.D. [AlexKreuz]
+- 07-23-04: R.E.E.D: Upper classes were converting into novices. [AlexKreuz]
+- 07-23-04: PlayerDataLoad() made obsolete by R.E.E.D. [AlexKreuz]
 - 07-23-04: R.E.E.D case insensitive duplicate characters not converted. [AlexKreuz]
 - 07-23-04: ALBGM_NEWPLAYER fixed after R.E.E.D conflict occured. [AlexKreuz]
 - 07-23-04: JCon Account Creator fixed after R.E.E.D conflict occured. [AlexKreuz]
